Bug 95744 - Writer -- Name given to Shape draw objects is not saved to ODF archive, gone when document is reopened
Summary: Writer -- Name given to Shape draw objects is not saved to ODF archive, gone ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: Other All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: odf target:5.1.0 target:5.0.5
Keywords: dataLoss, regression
Depends on:
Blocks:
 
Reported: 2015-11-11 14:47 UTC by V Stuart Foote
Modified: 2016-10-25 19:17 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2015-11-11 14:47:54 UTC
In Writer when document is written to ODF on save--the Name attribute of draw shapes is being lost.  It is not present in content.xml file of the ODF archive.

To have Drawing objects (other than Frames) show in Navigator, they must have a Name assigned. But, the Names of all draw shapes are gone from Navigator on reopening, so a Data loss.

Frame objects are a long present feature in writer. When given a name, they do retain it in a <draw:name="... " stanza in content.xml, and it is restored on reopening.

Interestingly, for the draw objects entries in their Title and Description dialog is recorded into the ODF archive.

So just suspect something missing in writing details of the draw objects (other than frames) to the ODF archive.

STR

1. create a document in Writer
2. insert a Frame anchor to page, and fill with some text.
3. open the Frame -> Options dialog and enter a Name (default is Frame1)
4. insert a TextBox (from standard menu button, or Insert menu), drag to size, and fill with text. Anchor to page.
5. from context menu of TextBox just created--Name it
6. check the Navigator -- both the Frame and the Draw objects show their names
7. save to ODF
8. reopen

result -- Name(s) of Draw objects are gone

expected -- Name(s) of Draw objects should be recorded to ODF and restored on opening.
Comment 1 Buovjaga 2015-11-12 12:39:26 UTC
You are right.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: b216cc1b8096eb60c27f67e8c27b7cd756c75e38
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-11-12_00:06:20
Locale: fi-FI (fi_FI)
Comment 2 Commit Notification 2015-11-13 07:01:55 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=249f8b1cc9897ac9666dd5c69dc22fae7586c207

tdf#95744: saving shape names re-enabled

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 V Stuart Foote 2015-11-15 15:26:24 UTC
On Windows 10 Pro 64-bit en-US with
Version: 5.1.0.0.alpha1+ (x64)
Build ID: 2faf5622664c322f0516dd2484fc154ae504049a
TinderBox: Win-x86@42, Branch:master, Time: 2015-11-15_00:57:05
Locale: en-US (en_US)

Confirming it is fixed.
Comment 4 Michael Stahl 2016-01-08 20:59:56 UTC
broken since 5.0, by commit c29657e0d6bb707345584ac7a7f5ae5016f37297
Comment 5 Commit Notification 2016-01-08 21:01:55 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4b1f79280a617a973ba27e27cff7b2d216468638&h=libreoffice-5-0

tdf#95744: saving shape names re-enabled

It will be available in 5.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.