tdf#95744: saving shape names re-enabled

commit c29657e0d6bb707345584ac7a7f5ae5016f37297 inverted
one of the tests for SvXMLExportFlags::OASIS

Change-Id: I523cecd4203c91d82a4e3e82b8457d2c55a5fff0
Reviewed-on: https://gerrit.libreoffice.org/19931
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Oliver Specht <oliver.specht@cib.de>